# atm_machine

./: .gitignore  README.md  app.py  auto_telegram_checker.py  bybit.py  config.py  keys.py  keys.py.example  models.py  models_utils.py  my_global_vars.pickle  pnl_checker.py  pyproject.toml  sync_time.sh  telegram_checker.py  ws_kline.py  ws_stoporder.py
KnowledgeBase/: HowToDeployToProduction.txt  HowToEditModelsAndMigrate  HowToKnowWhichPairGotMoreVolume  HowToLoginPostgres  HowToSendLogsToTelegram  HowToSyncLocalTimeWithByBitServer  KnowledgeNotes.txt
migrations/versions/: 0ae2a80a0031_.py  158580316a50_.py  1631ba82c7c5_.py  18b80fb1c366_.py  241b4844203b_.py  279e98bf5b0b_.py  2befb900280f_.py  3abf5ea48238_.py  495ffff22d4c_.py  559a2467ade4_.py  5896343fd385_.py  58dadcea4b61_.py  68972daae827_.py  7127bb0d3864_.py  82826dd9d686_.py  90210524639f_.py  966b27c9b917_.py  9e2d1afa9437_.py  d33d999b4260_.py  f308bda1b7d8_.py  f34153976e4c_.py  fd96d1afac04_.py  fdb6fb7ed35c_.py
