[tool.poetry]
name = "atm_machine"
version = "0.1.0"
description = ""
authors = ["Fahmi Eshaq <fjamcom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pybit = "^2.3.0"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
telegram-send = "^0.34"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-Script = "^2.0.6"
psutil = "^5.9.1"
pyTelegramBotAPI = "^4.6.1"
wheel = "^0.37.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
